<resources>
    <string name="app_name">NYTimesSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="searchHint">Enter Search Query</string>
    <string name="btnSearch">Search</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="settings">Advance Filter</string>
    <string name="bgnDate">Begin Date</string>
    <string name="sortOrder">Sort Order</string>
    <string name="deskValues">News Desk Value</string>
    <string name="cb1">Arts</string>
    <string name="cb2">Fashion &amp; Style</string>
    <string name="cb3">Sports</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string-array name="sortOrder">
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>

</resources>
